--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -12,13 +12,13 @@
   opacity: 1;
 
   @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
-    only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
-    only screen and (min-width: 125em) {
+  only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+  only screen and (min-width: 125em) {
     background-image: url("../img/contact_img.jpg");
   }
 
   @media only screen and (max-width: $bp-small) {
-    padding: 4rem 2vw;
+    padding: 4rem 2vw 8rem;
   }
 }
 
@@ -46,13 +46,12 @@
     font-family: inherit;
     color: inherit;
     padding: 1.5rem 2rem;
-    border-radius: 2px;
     background-color: #e4e4e4;
     border: none;
     width: 100%;
     display: block;
     transition: all 0.3s;
-    box-shadow: -3px 0 0 0 $color-primary;
+    box-shadow: inset 4px 0 0 0 $color-primary;
 
     &:focus {
       outline: none;
@@ -72,7 +71,7 @@
     transition: all 0.3s;
   }
 
-  &__input:placeholder-shown + &__label {
+  &__input:placeholder-shown+&__label {
     opacity: 0;
     visibility: hidden;
     transform: translateY(-4rem);
