--- a/css/style.css
+++ b/css/style.css
@@ -392,6 +392,9 @@ a {
       grid-row-gap: 2rem;
       padding: 7rem 5rem;
       background-position: inherit; } }
+  @media only screen and (max-width: 26.25em) {
+    .work {
+      background-image: none; } }
   .work img {
     width: 100%; }
   @media only screen and (max-width: 37.5em) {
