--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+html {
+  scroll-behavior: smooth; }
+
 *,
 *::before,
 *::after {
@@ -60,7 +63,7 @@ a {
   color: #fff;
   line-height: 1;
   margin: 3rem 0 5rem;
-  box-shadow: 0px 6px 0px 0px #fff; }
+  box-shadow: 0.2rem 0.8rem 0 -0.2rem #fff; }
   .heading-1--dark {
     color: #6f7781; }
 
@@ -69,17 +72,17 @@ a {
   color: #fff;
   line-height: 1;
   margin: 3rem 0 5rem;
-  box-shadow: 0px 6px 0px 0px #1f1e1c; }
+  box-shadow: 0.2rem 0.8rem 0 -0.2rem #1f1e1c; }
   .heading-2--light {
     color: #f9f7f6; }
   .heading-2--dark {
     color: #1f1e1c; }
   @media only screen and (max-width: 37.5em) {
     .heading-2 {
-      font-size: 6.2rem; } }
+      font-size: 5.2rem; } }
 
 .heading-3 {
-  font-size: 2rem;
+  font-size: 2.2rem;
   color: #f84525;
   text-transform: uppercase; }
 
@@ -100,7 +103,7 @@ a {
   border: none;
   border-radius: 0;
   font-family: "sk", sans-serif;
-  font-size: 2rem;
+  font-size: 2.2rem;
   text-transform: uppercase;
   padding: 1.8rem 3rem;
   cursor: pointer;
@@ -124,7 +127,7 @@ a {
   padding: 3rem 0; }
 
 .cnt {
-  box-shadow: 0px 6px 0px 0px #051627; }
+  box-shadow: 0.2rem 0.8rem 0 -0.2rem #1f1e1c; }
 
 .mb-lg {
   margin-bottom: 4rem; }
@@ -541,6 +544,10 @@ a {
     @media only screen and (max-width: 37.5em) {
       .service__text {
         grid-column: 1 / span 2; } }
+
+.services_all {
+  box-shadow: inset 0px -0.2rem #eb4325;
+  color: #cccccc; }
 
 .contact {
   background: #fff;
