--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -9,7 +9,7 @@
   color: $color-white;
   line-height: 1;
   margin: 3rem 0 5rem;
-  box-shadow: 0px 6px 0px 0px $color-white;
+  box-shadow: 0.2rem .8rem 0 -0.2rem $color-white;
 
   &--dark {
     color: $color-grey-dark-1;
@@ -22,7 +22,7 @@
   color: $color-white;
   line-height: 1;
   margin: 3rem 0 5rem;
-  box-shadow: 0px 6px 0px 0px $color-secondary;
+  box-shadow: 0.2rem .8rem 0 -0.2rem $color-secondary;
 
   &--light {
     color: $color-grey-light-1;
@@ -33,13 +33,13 @@
   }
 
   @media only screen and (max-width: $bp-small) {
-    font-size: 6.2rem;
+    font-size: 5.2rem;
   }
 }
 
 .heading-3 {
   @extend %heading;
-  font-size: 2rem;
+  font-size: 2.2rem;
   color: $color-primary;
   text-transform: uppercase;
 }
@@ -68,7 +68,7 @@
   border: none;
   border-radius: 0;
   font-family: $font-display;
-  font-size: 2rem;
+  font-size: 2.2rem;
   text-transform: uppercase;
   padding: 1.8rem 3rem;
   cursor: pointer;
@@ -99,7 +99,7 @@
 }
 
 .cnt {
-  box-shadow: 0px 6px 0px 0px #051627;
+  box-shadow: 0.2rem .8rem 0 -0.2rem $color-secondary;
 }
 
 .mb-lg {
