--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -35,7 +35,8 @@
     background-position: inherit;
   }
   @media only screen and (max-width: $bp-xsSmall) {
-    background-image: none;
+    // background-image: none;
+    object-fit: cover;
   }
 
   img {
