changed bg image back

--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -35,8 +35,7 @@
     background-position: inherit;
   }
   @media only screen and (max-width: $bp-xsSmall) {
-    // background-image: none;
-    object-fit: cover;
+    background-image: none;
   }
 
   img {
