--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -4,14 +4,20 @@
   background-image: url("../img/hex-small.jpg");
   background-size: cover;
   background-position: center;
-  display: grid;
-  grid-template-rows: repeat(10, 1fr);
-  grid-template-columns: repeat(10, 1fr);
-  justify-items: center;
+  text-align: center;
+  padding: 5rem;
+  height: 100vh;
+  @supports (display: grid) {
+    display: grid;
+    grid-template-rows: repeat(10, 1fr);
+    grid-template-columns: repeat(10, 1fr);
+    justify-items: center;
+    padding: 0;
+  }
 
   @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
-  only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
-  only screen and (min-width: 125em) {
+    only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+    only screen and (min-width: 125em) {
     background-image: url("../img/hex.jpg");
   }
 
@@ -34,13 +40,21 @@
   }
 
   &__logo {
-    grid-row: 1 / 2;
-    grid-column: 1 / 2;
+    float: left;
     height: 4.5rem;
-    width: 6rem;
-    align-self: center;
-    justify-self: center;
-    margin-right: 4rem;
+    width: 5rem;
+    content: "";
+    display: table;
+    clear: both;
+    @supports (display: grid) {
+      grid-row: 1 / 2;
+      grid-column: 1 / 2;
+      height: 4.5rem;
+      width: 6rem;
+      align-self: center;
+      justify-self: center;
+      margin-right: 4rem;
+    }
 
     @media only screen and (max-width: $bp-medium) {
       justify-self: start;
