--- a/css/style.css
+++ b/css/style.css
@@ -176,21 +176,19 @@ a {
       padding: 0;
       padding-bottom: 3rem; } }
   .header__logo {
-    float: left;
+    position: absolute;
+    top: 2rem;
+    left: 2rem;
     height: 4.5rem;
-    width: 5rem;
-    content: "";
-    display: table;
-    clear: both; }
+    width: 6rem; }
     @supports (display: grid) {
       .header__logo {
         grid-row: 1 / 2;
         grid-column: 1 / 2;
-        height: 4.5rem;
-        width: 6rem;
         align-self: center;
         justify-self: center;
-        margin-right: 4rem; } }
+        margin-right: 4rem;
+        position: initial; } }
     @media only screen and (max-width: 50em) {
       .header__logo {
         justify-self: start;
@@ -202,16 +200,12 @@ a {
       .header__logo {
         display: none; } }
   .header__big {
-    grid-row: 1 / 4;
-    grid-column: 1 / -1;
-    align-self: center;
-    justify-self: center;
+    margin-top: 8rem;
     color: #201f1c36;
     text-shadow: 0px 0px 2px #201f1c6e;
     text-transform: uppercase;
     font-family: "sui", sans-serif;
     letter-spacing: 6rem;
-    margin-right: -6rem;
     font-size: 9rem;
     font-weight: 100;
     opacity: 0.8;
@@ -219,6 +213,15 @@ a {
     background-position: center;
     background-size: contain;
     -webkit-background-clip: text; }
+    @supports (display: grid) {
+      .header__big {
+        grid-row: 1 / 4;
+        grid-column: 1 / -1;
+        align-self: center;
+        justify-self: center;
+        letter-spacing: 6rem;
+        margin-right: -6rem;
+        margin-top: 0; } }
     @media only screen and (max-width: 75em) {
       .header__big {
         letter-spacing: 4rem;
@@ -244,13 +247,17 @@ a {
       .header__big {
         transform: translateY(1.5rem); } }
   .header__ideas {
-    grid-row: 4 / 5;
-    grid-column: 1/ -1;
-    justify-self: center;
-    align-self: center;
+    transform: translateY(5rem);
     font: 8rem "montserrat_bold", sans-serif;
     color: #1f1e1c;
     margin: 3rem 0 -1rem 0; }
+    @supports (display: grid) {
+      .header__ideas {
+        grid-row: 4 / 5;
+        grid-column: 1/ -1;
+        justify-self: center;
+        align-self: center;
+        transform: translateY(0); } }
     @media only screen and (max-width: 50em) {
       .header__ideas {
         font-size: 7.5rem; } }
@@ -263,12 +270,16 @@ a {
       .header__ideas {
         font-size: 5rem; } }
   .header__brought {
-    grid-row: 5 / 7;
-    grid-column: 1 / -1;
-    justify-self: center;
-    align-self: center;
+    transform: translateY(10rem);
     font: 8rem "montserrat_bold", sans-serif;
     color: #1f1e1c; }
+    @supports (display: grid) {
+      .header__brought {
+        grid-row: 5 / 7;
+        grid-column: 1 / -1;
+        justify-self: center;
+        align-self: center;
+        transform: translateY(0); } }
     @media only screen and (max-width: 50em) {
       .header__brought {
         font-size: 7.5rem; } }
@@ -292,11 +303,15 @@ a {
     animation-delay: 2.9s;
     margin-top: 5rem; }
   .header a {
-    grid-row: 9 / 10;
-    grid-column: 1 / -1;
-    align-self: center;
-    padding: 2rem 3rem;
-    justify-self: center; }
+    transform: translateY(20rem); }
+    @supports (display: grid) {
+      .header a {
+        transform: translateY(0);
+        grid-row: 9 / 10;
+        grid-column: 1 / -1;
+        align-self: center;
+        padding: 2rem 3rem;
+        justify-self: center; } }
     @media only screen and (max-height: 26.25em) {
       .header a {
         padding: 0; } }
@@ -581,6 +596,9 @@ a {
       padding: 4rem 2vw 8rem; } }
 
 .form__group {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   width: 50rem; }
   @media only screen and (max-width: 37.5em) {
     .form__group {
