--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -4,9 +4,11 @@
   background-image: url("../img/hex-small.jpg");
   background-size: cover;
   background-position: center;
+
   text-align: center;
   padding: 5rem;
   height: 100vh;
+
   @supports (display: grid) {
     display: grid;
     grid-template-rows: repeat(10, 1fr);
@@ -40,20 +42,20 @@
   }
 
   &__logo {
-    float: left;
+    position: absolute;
+    top: 2rem;
+    left: 2rem;
+
     height: 4.5rem;
-    width: 5rem;
-    content: "";
-    display: table;
-    clear: both;
+    width: 6rem;
+
     @supports (display: grid) {
       grid-row: 1 / 2;
       grid-column: 1 / 2;
-      height: 4.5rem;
-      width: 6rem;
       align-self: center;
       justify-self: center;
       margin-right: 4rem;
+      position: initial;
     }
 
     @media only screen and (max-width: $bp-medium) {
@@ -71,16 +73,13 @@
   }
 
   &__big {
-    grid-row: 1 / 4;
-    grid-column: 1 / -1;
-    align-self: center;
-    justify-self: center;
+    margin-top: 8rem;
+
     color: #201f1c36;
     text-shadow: 0px 0px 2px #201f1c6e;
     text-transform: uppercase;
     font-family: "sui", sans-serif;
     letter-spacing: 6rem;
-    margin-right: -6rem;
     font-size: 9rem;
     font-weight: 100;
     opacity: 0.8;
@@ -90,6 +89,15 @@
     background-size: contain;
     -webkit-background-clip: text;
 
+    @supports (display: grid) {
+      grid-row: 1 / 4;
+      grid-column: 1 / -1;
+      align-self: center;
+      justify-self: center;
+      letter-spacing: 6rem;
+      margin-right: -6rem;
+      margin-top: 0;
+    }
     @media only screen and (max-width: $bp-largest) {
       letter-spacing: 4rem;
       margin-right: -4rem;
@@ -122,13 +130,20 @@
   }
 
   &__ideas {
-    grid-row: 4 / 5;
-    grid-column: 1/ -1;
-    justify-self: center;
-    align-self: center;
+    transform: translateY(5rem);
+
     font: 8rem "montserrat_bold", sans-serif;
     color: $color-secondary;
     margin: 3rem 0 -1rem 0;
+
+    @supports (display: grid) {
+      grid-row: 4 / 5;
+      grid-column: 1/ -1;
+      justify-self: center;
+      align-self: center;
+
+      transform: translateY(0);
+    }
 
     @media only screen and (max-width: $bp-medium) {
       font-size: 7.5rem;
@@ -146,12 +161,18 @@
   }
 
   &__brought {
-    grid-row: 5 / 7;
-    grid-column: 1 / -1;
-    justify-self: center;
-    align-self: center;
+    transform: translateY(10rem);
+
     font: 8rem "montserrat_bold", sans-serif;
     color: $color-secondary;
+
+    @supports (display: grid) {
+      grid-row: 5 / 7;
+      grid-column: 1 / -1;
+      justify-self: center;
+      align-self: center;
+      transform: translateY(0);
+    }
 
     @media only screen and (max-width: $bp-medium) {
       font-size: 7.5rem;
@@ -183,11 +204,16 @@
   }
 
   a {
-    grid-row: 9 / 10;
-    grid-column: 1 / -1;
-    align-self: center;
-    padding: 2rem 3rem;
-    justify-self: center;
+    transform: translateY(20rem);
+    @supports (display: grid) {
+      transform: translateY(0);
+
+      grid-row: 9 / 10;
+      grid-column: 1 / -1;
+      align-self: center;
+      padding: 2rem 3rem;
+      justify-self: center;
+    }
 
     @media only screen and (max-height: $bp-xsSmall) {
       padding: 0;
