--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -73,7 +73,7 @@
   }
 
   &__big {
-    margin-top: 8rem;
+    transform: translateY(8rem);
 
     color: #201f1c36;
     text-shadow: 0px 0px 2px #201f1c6e;
@@ -96,7 +96,7 @@
       justify-self: center;
       letter-spacing: 6rem;
       margin-right: -6rem;
-      margin-top: 0;
+      transform: translateY(0);
     }
     @media only screen and (max-width: $bp-largest) {
       letter-spacing: 4rem;
@@ -130,7 +130,7 @@
   }
 
   &__ideas {
-    transform: translateY(5rem);
+    transform: translateY(15rem);
 
     font: 8rem "montserrat_bold", sans-serif;
     color: $color-secondary;
@@ -161,7 +161,7 @@
   }
 
   &__brought {
-    transform: translateY(10rem);
+    transform: translateY(20rem);
 
     font: 8rem "montserrat_bold", sans-serif;
     color: $color-secondary;
@@ -204,7 +204,7 @@
   }
 
   a {
-    transform: translateY(20rem);
+    transform: translateY(35rem);
     @supports (display: grid) {
       transform: translateY(0);
 
