--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -6,8 +6,8 @@
   background-position: center;
 
   text-align: center;
-  padding: 6rem;
   height: 100vh;
+  padding: 5rem;
 
   @supports (display: grid) {
     display: grid;
@@ -24,8 +24,11 @@
   }
 
   @media only screen and (max-width: $bp-medium) {
-    grid-column: 1 / -1;
-    padding: 2rem;
+    padding: 0;
+    @supports (display: grid) {
+      grid-column: 1 / -1;
+      padding: 2rem;
+    }
   }
 
   @media only screen and (max-width: $bp-small) {
@@ -73,7 +76,9 @@
   }
 
   &__big {
-    transform: translateY(8rem);
+    position: relative;
+    top: 10%;
+    left: 0%;
 
     color: #201f1c36;
     text-shadow: 0px 0px 2px #201f1c6e;
@@ -96,12 +101,15 @@
       justify-self: center;
       letter-spacing: 6rem;
       margin-right: -6rem;
-      transform: translateY(0);
+
+      position: initial;
+      top: 0%;
+      left: 0%;
     }
     @media only screen and (max-width: $bp-largest) {
+      font-size: 12rem;
       letter-spacing: 4rem;
       margin-right: -4rem;
-      font-size: 12rem;
     }
 
     @media only screen and (max-width: $bp-large) {
@@ -130,7 +138,9 @@
   }
 
   &__ideas {
-    transform: translateY(15rem);
+    position: relative;
+    top: 20%;
+    left: 0%;
 
     font: 8rem "montserrat_bold", sans-serif;
     color: $color-secondary;
@@ -142,7 +152,9 @@
       justify-self: center;
       align-self: center;
 
-      transform: translateY(0);
+      position: initial;
+      top: 0%;
+      left: 0%;
     }
 
     @media only screen and (max-width: $bp-medium) {
@@ -161,7 +173,9 @@
   }
 
   &__brought {
-    transform: translateY(20rem);
+    position: relative;
+    top: 25%;
+    left: 0%;
 
     font: 8rem "montserrat_bold", sans-serif;
     color: $color-secondary;
@@ -171,7 +185,10 @@
       grid-column: 1 / -1;
       justify-self: center;
       align-self: center;
-      transform: translateY(0);
+
+      position: initial;
+      top: 0%;
+      left: 0%;
     }
 
     @media only screen and (max-width: $bp-medium) {
@@ -204,9 +221,14 @@
   }
 
   a {
-    transform: translateY(35rem);
+    position: relative;
+    top: 35%;
+    left: 0%;
+
     @supports (display: grid) {
-      transform: translateY(0);
+      position: initial;
+      top: 0%;
+      left: 0%;
 
       grid-row: 9 / 10;
       grid-column: 1 / -1;
