--- a/sass/_services.scss
+++ b/sass/_services.scss
@@ -1,4 +1,6 @@
 .services {
+  overflow: auto;
+
   grid-column: col-start 1 / col-end 8;
   margin: 15rem 0;
   display: grid;
@@ -28,17 +30,21 @@
 }
 
 .service {
-  // float: left;
-  // width: 50%;
-  // margin-bottom: 6rem;
+  float: left;
+  width: 50%;
+  margin-bottom: 6rem;
+  padding: 5rem 15rem;
 
+  @supports (display: grid) {
+    width: auto;
+    margin-bottom: 0;
+
+    padding: 0;
+  }
   display: grid;
-  width: auto;
-  margin-bottom: 0;
   grid-template-columns: min-content 1fr;
   grid-row-gap: 1.5rem;
   grid-column-gap: 2.5rem;
-
   @media only screen and (max-width: $bp-small) {
     grid-row-gap: 0.5rem;
     grid-column-gap: 1.5rem;
