--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -1,4 +1,5 @@
 .contact {
+  overflow: auto;
   background: $color-white;
   background-image: url("../img/contact_img-small.jpg");
   background-size: cover;
