--- a/sass/_services.scss
+++ b/sass/_services.scss
@@ -33,18 +33,23 @@
   float: left;
   width: 50%;
   margin-bottom: 6rem;
-  padding: 5rem 15rem;
+  padding: 2rem 5rem;
 
   @supports (display: grid) {
     width: auto;
     margin-bottom: 0;
-
+    display: grid;
+    grid-template-columns: min-content 1fr;
+    grid-row-gap: 1.5rem;
+    grid-column-gap: 2.5rem;
     padding: 0;
   }
-  display: grid;
-  grid-template-columns: min-content 1fr;
-  grid-row-gap: 1.5rem;
-  grid-column-gap: 2.5rem;
+
+  @media only screen and (max-width: $bp-medium) {
+    padding: 0;
+    width: auto;
+  }
+
   @media only screen and (max-width: $bp-small) {
     grid-row-gap: 0.5rem;
     grid-column-gap: 1.5rem;
