--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,7 +1,7 @@
 // COLOR VARIABLES
 $color-primary: #f84525;
 
-$color-secondary: #1f1e1c;
+$color-secondary: #1f1c1c;
 
 $color-grey-light-1: #f9f7f6;
 $color-grey-light-2: #9299a0;
